; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_net_ip.c_Sys_ShowIP.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_net_ip.c_Sys_ShowIP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }
%struct.sockaddr = type { i32 }

@NET_ADDRSTRMAXLEN = common dso_local global i32 0, align 4
@numIP = common dso_local global i32 0, align 4
@localIP = common dso_local global %struct.TYPE_2__* null, align 8
@NA_IP = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"IP: %s\0A\00", align 1
@NA_IP6 = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"IP6: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Sys_ShowIP() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = load i32, i32* @NET_ADDRSTRMAXLEN, align 4
  %5 = zext i32 %4 to i64
  %6 = call i8* @llvm.stacksave()
  store i8* %6, i8** %2, align 8
  %7 = alloca i8, i64 %5, align 16
  store i64 %5, i64* %3, align 8
  store i32 0, i32* %1, align 4
  br label %8

8:                                                ; preds = %44, %0
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @numIP, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %47

12:                                               ; preds = %8
  %13 = trunc i64 %5 to i32
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @localIP, align 8
  %15 = load i32, i32* %1, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %16
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = bitcast i32* %18 to %struct.sockaddr*
  %20 = call i32 @Sys_SockaddrToString(i8* %7, i32 %13, %struct.sockaddr* %19)
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @localIP, align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @NA_IP, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %12
  %30 = call i32 @Com_Printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %7)
  br label %43

31:                                               ; preds = %12
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @localIP, align 8
  %33 = load i32, i32* %1, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i64 %34
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i64, i64* @NA_IP6, align 8
  %39 = icmp eq i64 %37, %38
  br i1 %39, label %40, label %42

40:                                               ; preds = %31
  %41 = call i32 @Com_Printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %7)
  br label %42

42:                                               ; preds = %40, %31
  br label %43

43:                                               ; preds = %42, %29
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %1, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %1, align 4
  br label %8

47:                                               ; preds = %8
  %48 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %48)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Sys_SockaddrToString(i8*, i32, %struct.sockaddr*) #2

declare dso_local i32 @Com_Printf(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
